Fix gradient rendering on Safari

--- a/app/javascript/styles/_schedule_grid.scss
+++ b/app/javascript/styles/_schedule_grid.scss
@@ -157,11 +157,11 @@ $signed-up-event-background-color: rgba(0, 0, 0, 0.4);
     border-radius: 0;
 
     .unavailable {
-      background: linear-gradient(to right, transparent, $schedule-grid-background);
+      background: linear-gradient(to right, rgba(255, 255, 255, 0), $schedule-grid-background);
       border-radius: 0;
 
       .signed-up & {
-        background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.3));
+        background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
       }
     }
   }
